--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,106 @@
-# YOLOv5 requirements
-# Usage: pip install -r requirements.txt
-
-# Base ----------------------------------------
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python>=4.1.1
-Pillow>=7.1.2
-PyYAML>=5.3.1
-requests>=2.23.0
-scipy>=1.4.1  # Google Colab version
-tqdm>=4.41.0
-protobuf<4.21.3  # https://github.com/ultralytics/yolov5/issues/8012
-
-# Logging -------------------------------------
-tensorboard>=2.4.1
-# wandb
-
-# Plotting ------------------------------------
-pandas>=1.1.4
-seaborn>=0.11.0
-
-# Export --------------------------------------
-# coremltools>=4.1  # CoreML export
-# onnx>=1.9.0  # ONNX export
-# onnx-simplifier>=0.3.6  # ONNX simplifier
-# scikit-learn==0.19.2  # CoreML quantization
-# tensorflow>=2.4.1  # TFLite export
-# tensorflowjs>=3.9.0  # TF.js export
-# openvino-dev  # OpenVINO export
-
-# Extras --------------------------------------
-ipython  # interactive notebook
-psutil  # system utilization
-thop  # FLOPs computation
-# albumentations>=1.0.3
-# pycocotools>=2.0  # COCO mAP
-# roboflow
+addict==2.4.0
+aiofiles==23.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+altair==4.2.2
+altgraph==0.17.3
+anyio==3.6.2
+async-timeout==4.0.2
+attrs==23.1.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+coloredlogs==15.0.1
+contourpy==1.0.7
+customtkinter==5.1.3
+cycler==0.11.0
+darkdetect==0.8.0
+entrypoints==0.4
+fastapi==0.95.1
+ffmpy==0.3.0
+filelock==3.12.0
+flatbuffers==23.3.3
+fonttools==4.39.3
+frozenlist==1.3.3
+fsspec==2023.4.0
+gradio==3.28.2
+gradio_client==0.1.4
+h11==0.14.0
+httpcore==0.17.0
+httpx==0.24.0
+huggingface-hub==0.14.1
+humanfriendly==10.0
+idna==3.4
+imageio==2.28.1
+importlib-resources==5.12.0
+Jinja2==3.1.2
+jsonschema==4.17.3
+kiwisolver==1.4.4
+lazy_loader==0.2
+linkify-it-py==2.0.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mdit-py-plugins==0.3.3
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.4
+networkx==3.1
+numpy==1.24.3
+onnx==1.13.1
+onnxruntime==1.14.1
+opencv-python==4.7.0.72
+orjson==3.8.11
+packaging==23.1
+pandas==2.0.1
+pefile==2023.2.7
+Pillow==9.5.0
+pkgutil_resolve_name==1.3.10
+protobuf==3.20.3
+pycocotools==2.0.6
+pydantic==1.10.7
+pydub==0.25.1
+Pygments==2.15.1
+pyinstaller==5.11.0
+pyinstaller-hooks-contrib==2023.3
+pyparsing==3.0.9
+pyreadline3==3.4.1
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-multipart==0.0.6
+pytube==15.0.0
+pytz==2023.3
+PyWavelets==1.4.1
+pywin32-ctypes==0.2.0
+PyYAML==6.0
+regex==2023.5.5
+requests==2.29.0
+scikit-image==0.20.0
+scipy==1.9.1
+seaborn==0.12.2
+semantic-version==2.10.0
+six==1.16.0
+sniffio==1.3.0
+starlette==0.26.1
+supervision==0.6.0
+sympy==1.11.1
+tifffile==2023.4.12
+timm==0.6.13
+tokenizers==0.13.3
+tomli==2.0.1
+toolz==0.12.0
+torch==1.12.0+cu113
+torchaudio==0.12.0+cu113
+torchvision==0.13.0+cu113
+tqdm==4.65.0
+transformers==4.28.1
+typing_extensions==4.5.0
+tzdata==2023.3
+uc-micro-py==1.0.2
+urllib3==1.26.15
+uvicorn==0.22.0
+websockets==11.0.2
+yapf==0.33.0
+yarl==1.9.2
+zipp==3.15.0
